<resources>
    <string name="app_name">LN Stylist Search</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>

    <string name="next">Nerd</string>
    <string name="previous">Back</string>
    <string name="settings">Settings</string>
    <string name="add_to_collection">Add this item to\nyour collection</string>
    <string name="unavailable">Image unavailable</string>

    <!-- Strings used for attributes -->
    <string name="Spec1">Special Attribute 1</string>
    <string name="Spec2">Special Attribute 2</string>
    <string name="Color1">Primary Color</string>
    <string name="Color2">Secondary Color</string>
    <string name="Pose">Posed</string>
    <string name="Rarity">Rarity</string>
    <string name="N_C">Nation/Category</string>
    <string name="Sty1">Style 1</string>
    <string name="Sty2">Style 2</string>
    <string name="search_indication_icon">Search Indication Icon</string>
    <string name="search_item_name">Search Item Name/Set</string>
    <string name="search_filter_icon">Search Filter Icon</string>
    <string name="your_selections">Your Selections</string>
    <string name="id">ID</string>
    <string name="search">Search!</string>
    <string name="clear_filters">Clear Filters</string>
</resources>