<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Main_Screen">

    <fragment
        android:id="@+id/Main_Screen"
        android:name="com.example.lnstylistsearch.ItemList"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/item_list_screen">

        <action
            android:id="@+id/main_to_info"
            app:destination="@id/Info_screen" />
        <action
            android:id="@+id/main_to_settings"
            app:destination="@id/settings" />
        <action
            android:id="@+id/main_to_filters"
            app:destination="@id/filters" />
    </fragment>
    <fragment
        android:id="@+id/Info_screen"
        android:name="com.example.lnstylistsearch.ItemDetails"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/item_details">

        <action
            android:id="@+id/info_to_main"
            app:destination="@id/Main_Screen" />
    </fragment>
    <fragment
        android:id="@+id/settings"
        android:name="com.example.lnstylistsearch.Settings"
        android:label="@string/settings_fragment"
        tools:layout="@layout/settings">
        <action
            android:id="@+id/settings_to_main"
            app:destination="@id/Main_Screen" />
    </fragment>
    <fragment
        android:id="@+id/filters"
        android:name="com.example.lnstylistsearch.Filters"
        android:label="Filters"
        tools:layout="@layout/filters">
        <action
            android:id="@+id/filters_execute"
            app:destination="@id/Main_Screen" />
        <action
            android:id="@+id/filters_back"
            app:destination="@id/Main_Screen" />
    </fragment>
</navigation>