<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".ItemDetails">

    <Button
        android:id="@+id/back_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:foreground="@drawable/abc_vector_test"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/collection_add_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/add_to_collection"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/collections_spinner_2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/collection_add_label" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/unavailable"
        app:layout_constraintBottom_toTopOf="@+id/collections_spinner_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_item"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="193dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/Row1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/PC_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/Color1"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/PC_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Row2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/SC_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Color2"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/SC_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Row3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Sty1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sty1"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Sty1_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Row4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Sty2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sty2"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Sty2_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Row5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Posed_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pose"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Posed_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Row6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/SA1_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Spec1"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/SA1_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Row7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/SA2_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Spec2"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/SA2_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Row8"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Rarity_label"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Rarity"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Rarity_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/Row9"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/NC_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/N_C"
                android:textColor="@color/text"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/NC_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="TextView"
                android:textColor="@color/text"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/ID_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/id"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/back_item"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Item_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="Item Name"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/ID_text"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/Owned_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="#00FFFFFF"
        android:src="@android:drawable/checkbox_off_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>