<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <Button
        android:id="@+id/btn_filters_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:foreground="@drawable/abc_vector_test"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_filters_execute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_clr_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/clear_filters"
        app:layout_constraintBottom_toTopOf="@+id/btn_filters_execute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/filter_select_buttons"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_clr_filters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_filters_back">

        <Button
            android:id="@+id/btn_clr1_sel"
            android:layout_width="135dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Select Color 1" />

        <Button
            android:id="@+id/btn_clr2_sel"
            android:layout_width="135dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Select Color 2" />

        <Button
            android:id="@+id/btn_sty1_sel"
            android:layout_width="135dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Select Style 1" />

        <Button
            android:id="@+id/btn_sty2_sel"
            android:layout_width="135dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Select Style 2" />

        <Button
            android:id="@+id/btn_posed_sel"
            android:layout_width="135dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Select Posed" />

        <Button
            android:id="@+id/btn_spa1_sel"
            android:layout_width="135dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:text="Select Special\nAttribute 1" />

        <Button
            android:id="@+id/btn_spa2_sel"
            android:layout_width="135dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:text="Select Special\nAttribute 2" />

        <Button
            android:id="@+id/btn_rar_sel"
            android:layout_width="135dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="Select Rarity" />

        <Button
            android:id="@+id/btn_gal_sel"
            android:layout_width="135dp"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:text="Select Gallery\nSection" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/filter_select_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filter_select_buttons"
        app:layout_constraintTop_toTopOf="@+id/filter_select_buttons">

        <TextView
            android:id="@+id/txt_clr1_sel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/txt_clr2_sel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/txt_sty1_sel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/txt_sty2_sel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/txt_pos_sel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/txt_spa1_sel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/txt_spa2_sel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/txt_rar_sel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            android:textColor="@color/text" />

        <TextView
            android:id="@+id/txt_gal_sel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeStepGranularity="1sp"
            android:textColor="@color/text" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView33"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/your_selections"
        android:textColor="@color/text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toEndOf="@+id/filter_select_buttons" />

</androidx.constraintlayout.widget.ConstraintLayout>